--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
-    compile 'io.reactivex:rxjava:1.3.4'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.8'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
 }
