--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,5 @@ repositories {
 dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.8'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'org.jsoup:jsoup:1.11.2'
 }
